[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["jack ning <github@bytedesk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.11"
# 因为 unstructured requires Python >=3.9.0,<3.13，所以限制版本
python = "3.11.4"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
redis = "^5.0.8"
pydantic-settings = "^2.4.0"
sse-starlette = "^2.1.3"
requests = "^2.32.3"
langchain = "^0.2.15"
langchain-community = "^0.2.14"
pypdf = "^4.3.1"
langchain-text-splitters = "^0.2.2"
zhipuai = "^2.1.4.20230814"
langchain-huggingface = "^0.0.3"
sentence-transformers = "^3.0.1"
modelscope = "^1.17.1"
langchain-redis = "^0.0.2"
scikit-learn = "^1.5.1"
asyncio = "^3.4.3"
celery = "^5.4.0"
# https://python.langchain.com/v0.2/docs/integrations/providers/unstructured/
langchain-unstructured = "^0.1.2"
unstructured = {extras = ["xlsx"], version = "^0.15.8"}
markdown = "^3.7"
python-docx = "^1.1.2"
pdfminer-six = "^20240706"
pi-heif = "^0.18.0"
matplotlib = "^3.9.2"
unstructured-inference = "^0.7.36"
edge-tts = "^6.1.12"
openai = "^1.43.0"
dashscope = "^1.20.8"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
